# DCUBOT

./: .bash_aliases  .bashrc  README.md
install/: local_setup.sh  setup.sh
install/librealsense2/lib/: librealsense2-gl.so.2.57.5  librealsense2.so.2.57
install/librealsense2/share/librealsense2/: package.sh
install/microxrcedds_agent/lib/: libmicroxrcedds_agent.so.1.3.0
install/microxrcedds_agent/share/microxrcedds_agent/: package.sh
install/powertrain/share/powertrain/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/realsense2_description/share/realsense2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
src/empty-pkg/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/powertrain/: setup.cfg  setup.py
src/powertrain/powertrain/due_test_ros/: package.xml  serial_test_ros_pub.py
(+418 files in other folders)
