<?xml version="1.0"?>
<package format="3">
  <name>due_test_ros</name>
  <version>0.1.0</version>
  <description>ROS2 nodes for Arduino DUE serial test</description>
  <maintainer email="dcubot@example.com">dcubot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>setuptools</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
